Após primeiro teste no celular real.